# n32g031-cmake-template

./: CMakeLists.txt  CMakePresets.json  README.md
